--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Motoki's Photo Gallery</title>
+	<title>宇都宮アパートメント｜ブリランテ</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="gallery.css">
 	<link rel="stylesheet" type="text/css" href="colorbox.css">
@@ -17,7 +17,7 @@
   <header class="drawer-navbar drawer-navbar--fixed" role="banner">
     <div class="drawer-container">
       <div class="drawer-navbar-header">
-        <a class="drawer-brand" href="top.html">宇都宮アパートメント｜ブリランテ</a>
+        <a class="drawer-brand" href="gallery.html">宇都宮アパートメント｜ブリランテ</a>
         <button type="button" class="drawer-toggle drawer-hamburger">
           <span class="sr-only">toggle navigation</span>
           <span class="drawer-hamburger-icon"></span>
@@ -25,104 +25,73 @@
       </div>
       <nav class="drawer-nav" role="navigation">
         <ul class="drawer-menu ">
-          <li><a class="drawer-menu-item" href="nature.html">物件概要</a></li>
-					<li><a class="drawer-menu-item" href="animals.html">ギャラリー</a></li>
-          <li><a class="drawer-menu-item" href="still-life.html">管理人プロフィール</a></li>
-					<li><a class="drawer-menu-item" href="transportation.html">お問い合わせ</a></li>
+          <li><a class="drawer-menu-item" href="">物件概要</a></li>
+					<li><a class="drawer-menu-item" href="gallery.html">ギャラリー</a></li>
+          <li><a class="drawer-menu-item" href="">管理人プロフィール</a></li>
+					<li><a class="drawer-menu-item" href="">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
 <main role="main">
-	<div id="background">
+<div id="background">
 <section>
-				<h1>ギャラリー</h1>
-				<div class="flexbox">
+<h1>ギャラリー</h1>
+<div class="flexbox">
   <div class="item">
 			<a class="gallery" href="images/img-1.jpg" title="">
     <img src="images/img-1.jpg" alt="" />
 </a>
-    <p>
-      この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-    </p>
+		<p></p>
   </div>
   <div class="item">
 			<a class="gallery" href="images/img-2.jpg" title="">
     <img src="images/img-2.jpg" alt="" />
 </a>
-    <p>
-       この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
+		<p></p>
   </div>
   <div class="item">
 			<a class="gallery" href="images/img-3.jpg" title="">
     <img src="images/img-3.jpg" alt="" />
 </a>
-    <p>
-      この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-    </p>
+		<p></p>
   </div>
 	<div class="item">
 			<a class="gallery" href="images/img-4.jpg" title="">
     <img src="images/img-4.jpg" alt="" />
 </a>
-		<p>
-			この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-		</p>
+		<p></p>
 	</div>
 	<div class="item">
 			<a class="gallery" href="images/img-5.jpg" title="">
     <img src="images/img-5.jpg" alt="" />
 </a>
-		<p>
-			この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-		</p>
+		<p></p>
 	</div>
 	<div class="item">
 			<a class="gallery" href="images/img-6.jpg" title="">
     <img src="images/img-6.jpg" alt="" />
 </a>
-		<p>
-			この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-		</p>
+		<p></p>
 	</div>
 	<div class="item">
 			<a class="gallery" href="images/img-7.jpg" title="画像グループタイトル1">
     <img src="images/img-7.jpg" alt="" />
 </a>
-		<p>
-			この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-		</p>
-	</div>
-	<div class="item">
-			<a class="gallery" href="" title="画像グループタイトル1">
-    <img src="images/coming_soon.png" alt="" />
-</a>
-		<p>
-			この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-		</p>
-	</div>
-	<div class="item">
-			<a class="gallery" href="" title="画像グループタイトル1">
-    <img src="images/coming_soon.png" alt="" />
-</a>
-		<p>
-			この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。
-		</p>
+		<p></p>
 	</div>
 </div>
-
 </section>
-
 </div>
 </main>
 
 <footer>
 	<nav id="under-nav">
 	<ul>
-	<li class="minimini"><a href="https://twitter.com/mtk754522">MINIMINI</a></li>
-	<li class="homes"><a href="https://www.instagram.com/wtnbmtk/">HOME'S</a></li>
-	<li class="suumo"><a href="https://500px.com/p/MotokiWatanabe">SUUMO</a></li>
+	<li class="minimini"><a href="">MINIMINI</a></li>
+	<li class="homes"><a href="">HOME'S</a></li>
+	<li class="suumo"><a href="">SUUMO</a></li>
 	</ul>
 	</nav>
 	<small>© Haruko Watanabe</small>
