--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>宇都宮アパートメント｜ブリランテ</title>
+	<title>宇都宮アパートメント「ブリランテ」</title>
+	<meta name="description" content="宇都宮アパートメント「ブリランテ」は宇都宮市の賃貸アパートです。お部屋はリフォーム済みで明るいイメージです。所在地は江曽島駅から徒歩６分の場所にあります。">
+	<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="gallery.css">
 	<link rel="stylesheet" type="text/css" href="colorbox.css">
@@ -17,7 +19,7 @@
   <header class="drawer-navbar drawer-navbar--fixed" role="banner">
     <div class="drawer-container">
       <div class="drawer-navbar-header">
-        <a class="drawer-brand" href="gallery.html">宇都宮アパートメント｜ブリランテ</a>
+        <a class="drawer-brand" href="gallery.html">宇都宮アパートメント「ブリランテ」</a>
         <button type="button" class="drawer-toggle drawer-hamburger">
           <span class="sr-only">toggle navigation</span>
           <span class="drawer-hamburger-icon"></span>
