--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+        <meta name="google-site-verification" content="-j4oZA6Xm8-79GCVvqeXibfmP6bZjnpqiMwgmoB0xUo" />
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>宇都宮アパートメント「ブリランテ」</title>
