--- a/gallery.html
+++ b/gallery.html
@@ -39,51 +39,30 @@
 <main role="main">
 <div id="background">
 <section>
-<h1>ギャラリー</h1>
-<div class="flexbox">
-  <div class="item">
-			<a class="gallery" href="images/img-1.jpg" title="">
-    <img src="images/img-1.jpg" alt="" />
-</a>
-		<p></p>
-  </div>
-  <div class="item">
-			<a class="gallery" href="images/img-2.jpg" title="">
-    <img src="images/img-2.jpg" alt="" />
-</a>
-		<p></p>
-  </div>
-  <div class="item">
-			<a class="gallery" href="images/img-3.jpg" title="">
-    <img src="images/img-3.jpg" alt="" />
-</a>
-		<p></p>
-  </div>
-	<div class="item">
-			<a class="gallery" href="images/img-4.jpg" title="">
-    <img src="images/img-4.jpg" alt="" />
-</a>
-		<p></p>
+	<h1>ギャラリー</h1>
+	<div class="grid">
+		<div class="item">
+			<a class="gallery" href="images/img-1.jpg" title=""><img src="images/img-1.jpg" alt="" /></a>
+		</div>
+		<div class="item">
+			<a class="gallery" href="images/img-2.jpg" title=""><img src="images/img-2.jpg" alt="" /></a>
+		</div>
+		<div class="item">
+			<a class="gallery" href="images/img-3.jpg" title=""><img src="images/img-3.jpg" alt="" /></a>
+		</div>
+		<div class="item">
+			<a class="gallery" href="images/img-4.jpg" title=""><img src="images/img-4.jpg" alt="" /></a>
+		</div>
+		<div class="item">
+			<a class="gallery" href="images/img-5.jpg" title=""><img src="images/img-5.jpg" alt="" /></a>
+		</div>
+		<div class="item">
+			<a class="gallery" href="images/img-6.jpg" title=""><img src="images/img-6.jpg" alt="" /></a>
+		</div>
+		<div class="item">
+			<a class="gallery" href="images/img-7.jpg" title="画像グループタイトル1"><img src="images/img-7.jpg" alt="" /></a>
+		</div>
 	</div>
-	<div class="item">
-			<a class="gallery" href="images/img-5.jpg" title="">
-    <img src="images/img-5.jpg" alt="" />
-</a>
-		<p></p>
-	</div>
-	<div class="item">
-			<a class="gallery" href="images/img-6.jpg" title="">
-    <img src="images/img-6.jpg" alt="" />
-</a>
-		<p></p>
-	</div>
-	<div class="item">
-			<a class="gallery" href="images/img-7.jpg" title="画像グループタイトル1">
-    <img src="images/img-7.jpg" alt="" />
-</a>
-		<p></p>
-	</div>
-</div>
 </section>
 </div>
 </main>
