--- a/gallery.html
+++ b/gallery.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-        <meta name="google-site-verification" content="-j4oZA6Xm8-79GCVvqeXibfmP6bZjnpqiMwgmoB0xUo" />
+    <meta name="google-site-verification" content="-j4oZA6Xm8-79GCVvqeXibfmP6bZjnpqiMwgmoB0xUo" />
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>宇都宮アパートメント「ブリランテ」</title>
 	<meta name="description" content="宇都宮アパートメント「ブリランテ」は宇都宮市の賃貸アパートです。お部屋はリフォーム済みで明るいイメージです。所在地は江曽島駅から徒歩６分の場所にあります。">
 	<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="gallery.css">
+	<link rel="stylesheet" href="general.css">
 	<link rel="stylesheet" type="text/css" href="colorbox.css">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.1.0/css/drawer.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.1.0/js/drawer.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
-<body class="drawer drawer--left drawer--navbarTopGutter">
-  <header class="drawer-navbar drawer-navbar--fixed" role="banner">
-    <div class="drawer-container">
-      <div class="drawer-navbar-header">
-        <a class="drawer-brand" href="gallery.html">宇都宮アパートメント「ブリランテ」</a>
-        <button type="button" class="drawer-toggle drawer-hamburger">
-          <span class="sr-only">toggle navigation</span>
-          <span class="drawer-hamburger-icon"></span>
-        </button>
-      </div>
-      <nav class="drawer-nav" role="navigation">
-        <ul class="drawer-menu ">
-          <li><a class="drawer-menu-item" href="">物件概要</a></li>
-					<li><a class="drawer-menu-item" href="gallery.html">ギャラリー</a></li>
-          <li><a class="drawer-menu-item" href="">管理人プロフィール</a></li>
-					<li><a class="drawer-menu-item" href="">お問い合わせ</a></li>
-        </ul>
-      </nav>
-    </div>
+<body>
+  <header id="top-head">
+	<div class="inner">
+		<div id="mobile-head">
+			<a class="brand" href="summary.html">宇都宮アパートメント「ブリランテ」</a>
+			<div id="nav-toggle">
+			  <div>
+				<span></span>
+				<span></span>
+				<span></span>
+			  </div>
+			</div>
+		</div>
+		<nav id="global-nav">
+		<ul>
+        	<li><a class="list-1" href="summary.html">物件概要</a></li>
+			<li><a class="list-2" href="gallery.html">ギャラリー</a></li>
+        	<li><a class="list-3" href="">管理人プロフィール</a></li>
+			<li><a class="list-4" href="">お問い合わせ</a></li>
+		</ul>
+	  	</nav>
+	</div>
   </header>
 
-<main role="main">
+<main>
 <div id="background">
 <section>
 	<h1>ギャラリー</h1>
-	<div class="grid">
+	<div class="gallery">
 		<div class="item">
-			<a class="gallery" href="images/img-1.jpg" title=""><img src="images/img-1.jpg" alt="" /></a>
+			<a class="images" href="images/img-1.jpg" title=""><img src="images/img-1.jpg" alt="" /></a>
 		</div>
 		<div class="item">
-			<a class="gallery" href="images/img-2.jpg" title=""><img src="images/img-2.jpg" alt="" /></a>
+			<a class="images" href="images/img-2.jpg" title=""><img src="images/img-2.jpg" alt="" /></a>
 		</div>
 		<div class="item">
-			<a class="gallery" href="images/img-3.jpg" title=""><img src="images/img-3.jpg" alt="" /></a>
+			<a class="images" href="images/img-3.jpg" title=""><img src="images/img-3.jpg" alt="" /></a>
 		</div>
 		<div class="item">
-			<a class="gallery" href="images/img-4.jpg" title=""><img src="images/img-4.jpg" alt="" /></a>
+			<a class="images" href="images/img-4.jpg" title=""><img src="images/img-4.jpg" alt="" /></a>
 		</div>
 		<div class="item">
-			<a class="gallery" href="images/img-5.jpg" title=""><img src="images/img-5.jpg" alt="" /></a>
+			<a class="images" href="images/img-5.jpg" title=""><img src="images/img-5.jpg" alt="" /></a>
 		</div>
 		<div class="item">
-			<a class="gallery" href="images/img-6.jpg" title=""><img src="images/img-6.jpg" alt="" /></a>
+			<a class="images" href="images/img-6.jpg" title=""><img src="images/img-6.jpg" alt="" /></a>
 		</div>
 		<div class="item">
-			<a class="gallery" href="images/img-7.jpg" title="画像グループタイトル1"><img src="images/img-7.jpg" alt="" /></a>
+			<a class="images" href="images/img-7.jpg" title="画像グループタイトル1"><img src="images/img-7.jpg" alt="" /></a>
 		</div>
 	</div>
 </section>
@@ -78,20 +78,16 @@
 	</nav>
 	<small>© Haruko Watanabe</small>
 </footer>
+<script type="text/javascript" src="head.js"></script>
 <script type="text/javascript" src="jquery.colorbox-min.js"></script>
 <script>
 $(function() {
-    $(".gallery").colorbox({
+    $(".images").colorbox({
     rel:'slideshow',
     maxWidth:"90%",
     maxHeight:"90%",
     opacity: 0.7
   });
-});
-</script>
-<script>
-$(document).ready(function() {
-	 $('.drawer').drawer();
 });
 </script>
 </body>
