--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
 <main>
 <div id="background">
 <section>
-	<h1>ギャラリー</h1>
+	<h1>GALLERY</h1>
 	<div class="gallery">
 		<div class="item">
 			<a class="images" href="images/img-1.jpg" title=""><img src="images/img-1.jpg" alt="" /></a>
