--- a/summary.html
+++ b/summary.html
@@ -40,27 +40,27 @@
 <main>
 <div id="background">
 <section>
-	<h1>物件概要</h1>
+	<h1>SUMMARY</h1>
 	<div class="summary">
         <div class="section section-1">
             <div class="photo">
-                <a href="mobile.html"><img src="images/879.png" alt="" /></a>
+                <a href="mobile.html"><img src="images/200.png" alt="" /></a>
             </div>
             <div class="text">
-                <h1>物件情報 01</h1>
-                <p>お部屋は明るいイメージにフローリングを張り替えました。お掃除がしやすく風通し良好です。仕切りはアクリルタイプで光を通すのでお部屋が明るく感じます。​エアコンは新品に入れ替えました。室内収納は３段式です。</p>
+                <h1>STYLE</h1>
+                <p>お部屋は明るいイメージにフローリングを張り替えました。仕切りはアクリルタイプで光を通すのでお部屋が明るく感じます。お掃除がしやすく風通し良好です。</p>
                 <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
         </div>
         <hr>
         <div class="section section-2">
-            <div class="text">
-                <h1>物件情報 02</h1>
-                <p>お一人暮らしにちょうどいいサイズのビルトインタイプの一口コンロ付きキッチンで、収納もたっぷりあります。バスとトイレは別で使いやすく、お風呂は温度調節可能な追い焚き機能が付いています。室内には洗濯機置き場があるのでお好みの洗濯機を設置することができます。</p>
-                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
-            </div>
             <div class="photo">
                 <a href="mobile.html"><img src="images/1155.png" alt="" /></a>
+            </div>
+            <div class="text">
+                <h1>FACILITIES</h1>
+                <p>バス・トイレ別でお風呂は追い炊き可能です。洗濯機置場は室内にあります。エアコンは新品に入れ替えました。​。モニター付きインターホンがあり安全です。</p>
+                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
         </div>
         <hr>
@@ -69,20 +69,20 @@
                 <a href="mobile.html"><img src="images/1157.png" alt="" /></a>
             </div>
             <div class="text">
-                <h1>物件情報 03</h1>
-                <p>モニター付きインターホンもあり女性の一人暮らしにも安心です。来訪した人を室内のモニターで確認できます。かばんや帽子、衣類などがかけられるフックがお部屋について便利です。下駄箱も収納豊富で靴がたくさん入ります。</p>
+                <h1>CLOSETS</h1>
+                <p>室内収納は３段式です。鞄や帽子、衣類などがかけられるフックがお部屋に取付けてあります。靴箱は収納豊富で靴がたくさん入ります。</p>
                 <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
         </div>
         <hr>
         <div class="section section-4">
-            <div class="text">
-                <h1>物件情報 04</h1>
-                <p>江曽島駅から徒歩６分の場所でバス停も徒歩２分で近くにありお出かけにも便利です。人気の餃子店やお寿司屋がレスラン街道沿いにあるので、外食が楽しめる場所です。ウエルシア薬局、アピタ宇都宮店、セブンイレブン、ローソンも近くにありお買い物が便利です。</p>
-                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
-            </div>
             <div class="photo">
                 <a href="mobile.html"><img src="images/483.png" alt="" /></a>
+            </div>
+            <div class="text">
+                <h1>ACCESSIBILITY</h1>
+                <p>江曽島駅から徒歩６分の場所でバス停も徒歩２分で近くにありお出かけにも便利です。人気の餃子店やお寿司屋がレスラン街道沿いにあるので、外食が楽しめる場所です。ウエルシア薬局、アピタ宇都宮店、セブンイレブン、ローソンも近くにありお買い物が便利です。</p>
+                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
         </div>
 	</div>
