--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,11 @@
 	<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="general.css">
-	<link rel="stylesheet" href="lightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="colorbox.css">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://static.spearly.com/js/cms.js" defer></script>
+    <script>window.addEventListener('DOMContentLoaded',()=>{const t=document.querySelectorAll(':not(:defined)');for(const e of t) {e.style.visibility="hidden";}; window.spearly.config.AUTH_KEY="TMipNl_gbkMGj5aYa07rRH0r7R_xUzVbTlTXWCmbRoc"},{once:true})</script>
 </head>
 <body>
   <header id="top-head">
@@ -39,22 +41,38 @@
 
 <main>
 <div id="background">
-	<div class="gallery general">
-		<h1><span>GALLERY</span></h1>
-		<div class="gridGallery">
-			<a class="item" href="images/g04.jpeg" data-lightbox="album"><img src="images/g04.jpeg" alt="" /></a>
-			<a class="item" href="images/g05.jpeg" data-lightbox="album"><img src="images/g05.jpeg" alt="" /></a>
-			<a class="item" href="images/g10.jpeg" data-lightbox="album"><img src="images/g10.jpeg" alt="" /></a>
-			<a class="item" href="images/g11.jpeg" data-lightbox="album"><img src="images/g11.jpeg" alt="" /></a>
-			<a class="item" href="images/g12.jpeg" data-lightbox="album"><img src="images/g12.jpeg" alt="" /></a>
-			<a class="item" href="images/g13.jpeg" data-lightbox="album"><img src="images/g13.jpeg" alt="" /></a>
-			<a class="item" href="images/g14.jpeg" data-lightbox="album"><img src="images/g14.jpeg" alt="" /></a>
-			<a class="item" href="images/g20.jpeg" data-lightbox="album"><img src="images/g20.jpeg" alt="" /></a>
-			<a class="item" href="images/g18.jpeg" data-lightbox="album"><img src="images/g18.jpeg" alt="" /></a>
-			<a class="item" href="images/g19.jpeg" data-lightbox="album"><img src="images/g19.jpeg" alt="" /></a>
-			<a class="item" href="images/g22.jpeg" data-lightbox="album"><img src="images/g22.jpeg" alt="" /></a>
-		</div>
-	</div>
+    <div class="contact general">
+        <h1><span>CONTACT</span></h1>
+        <section>
+            <spearly-form
+                data-api-key='TMipNl_gbkMGj5aYa07rRH0r7R_xUzVbTlTXWCmbRoc'
+                data-form-id='f-AYI9iMTPvZE7ndxQCXt4'>
+                <h1>{%= form_title %}</h1>
+                <p>{%= form_description %}</p>
+                <div>
+
+
+                <h3>{%= form_label_mail %}</h3>
+
+                <p>{%= form_description_mail %}</p>
+
+                {%= form_mail %}
+
+                </div>
+                <div>
+
+
+                <h3>{%= form_label_content %}</h3>
+
+                <p>{%= form_description_content %}</p>
+
+                {%= form_content %}
+
+                </div>
+                <button type="submit">送信</button>
+            </spearly-form>
+        </section>
+    </div>
 </div>
 </main>
 
@@ -69,6 +87,5 @@
 	<small>© Haruko Watanabe</small>
 </footer>
 <script type="text/javascript" src="general.js"></script>
-<script src="lightbox.min.js"></script>
 </body>
 </html>
