--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="general.css">
-	<link rel="stylesheet" href="lightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="colorbox.css">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
@@ -39,22 +39,18 @@
 
 <main>
 <div id="background">
-	<div class="gallery general">
-		<h1><span>GALLERY</span></h1>
-		<div class="gridGallery">
-			<a class="item" href="images/g04.jpeg" data-lightbox="album"><img src="images/g04.jpeg" alt="" /></a>
-			<a class="item" href="images/g05.jpeg" data-lightbox="album"><img src="images/g05.jpeg" alt="" /></a>
-			<a class="item" href="images/g10.jpeg" data-lightbox="album"><img src="images/g10.jpeg" alt="" /></a>
-			<a class="item" href="images/g11.jpeg" data-lightbox="album"><img src="images/g11.jpeg" alt="" /></a>
-			<a class="item" href="images/g12.jpeg" data-lightbox="album"><img src="images/g12.jpeg" alt="" /></a>
-			<a class="item" href="images/g13.jpeg" data-lightbox="album"><img src="images/g13.jpeg" alt="" /></a>
-			<a class="item" href="images/g14.jpeg" data-lightbox="album"><img src="images/g14.jpeg" alt="" /></a>
-			<a class="item" href="images/g20.jpeg" data-lightbox="album"><img src="images/g20.jpeg" alt="" /></a>
-			<a class="item" href="images/g18.jpeg" data-lightbox="album"><img src="images/g18.jpeg" alt="" /></a>
-			<a class="item" href="images/g19.jpeg" data-lightbox="album"><img src="images/g19.jpeg" alt="" /></a>
-			<a class="item" href="images/g22.jpeg" data-lightbox="album"><img src="images/g22.jpeg" alt="" /></a>
-		</div>
-	</div>
+    <div class="profile general">
+        <h1><span>PROFILE</span></h1>
+        <section class="section section-1">
+            <div class="photo">
+                <img src="images/1309.png" alt="" />
+            </div>
+            <div class="text">
+                <h2>貸主：渡辺治子</h2>
+                <p>宇都宮でアパート経営をさせていただいています。宇都宮は餃子が有名でアパートの近くに人気店舗が複数あるので、餃子の食べ歩きが趣味の一つです。</p>
+            </div>
+        </section>
+    </div>
 </div>
 </main>
 
@@ -69,6 +65,5 @@
 	<small>© Haruko Watanabe</small>
 </footer>
 <script type="text/javascript" src="general.js"></script>
-<script src="lightbox.min.js"></script>
 </body>
 </html>
