--- a/summary.html
+++ b/summary.html
@@ -17,7 +17,7 @@
   <header id="top-head">
 	<div class="inner">
 		<div id="mobile-head">
-			<a class="brand" href="gallery.html">宇都宮アパートメント「ブリランテ」</a>
+			<a class="brand" href="summary.html">宇都宮アパートメント「ブリランテ」</a>
 			<div id="nav-toggle">
 			  <div>
 				<span></span>
@@ -30,8 +30,8 @@
 		<ul>
         	<li><a class="list-1" href="summary.html">物件概要</a></li>
 			<li><a class="list-2" href="gallery.html">ギャラリー</a></li>
-        	<li><a class="list-3" href="">管理人プロフィール</a></li>
-			<li><a class="list-4" href="">お問い合わせ</a></li>
+        	<li><a class="list-3" href="profile.html">管理人プロフィール</a></li>
+			<li><a class="list-4" href="contact.html">お問い合わせ</a></li>
 		</ul>
 	  	</nav>
 	</div>
@@ -39,54 +39,49 @@
 
 <main>
 <div id="background">
-<section>
-	<h1>SUMMARY</h1>
-	<div class="summary">
-        <div class="section section-1">
+    <div class="summary general">
+        <h1><span>SUMMARY</span></h1>
+        <section class="section section-1">
             <div class="photo">
-                <a href="mobile.html"><img src="images/200.png" alt="" /></a>
+                <img src="images/1212.png" alt="" />
             </div>
             <div class="text">
-                <h1>STYLE</h1>
+                <h2>STYLE</h2>
                 <p>お部屋は明るいイメージにフローリングを張り替えました。仕切りはアクリルタイプで光を通すのでお部屋が明るく感じます。お掃除がしやすく風通し良好です。</p>
-                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
-        </div>
+        </section>
         <hr>
-        <div class="section section-2">
+        <section class="section section-2">
             <div class="photo">
-                <a href="mobile.html"><img src="images/1155.png" alt="" /></a>
+                <img src="images/1155.png" alt="" />
             </div>
             <div class="text">
-                <h1>FACILITIES</h1>
+                <h2>FACILITIES</h2>
                 <p>バス・トイレ別でお風呂は追い炊き可能です。洗濯機置場は室内にあります。エアコンは新品に入れ替えました。​。モニター付きインターホンがあり安全です。</p>
-                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
-        </div>
+        </section>
         <hr>
-        <div class="section section-3">
+        <section class="section section-3">
             <div class="photo">
-                <a href="mobile.html"><img src="images/1157.png" alt="" /></a>
+                <img src="images/1157.png" alt="" />
             </div>
             <div class="text">
-                <h1>CLOSETS</h1>
+                <h2>CLOSETS</h2>
                 <p>室内収納は３段式です。鞄や帽子、衣類などがかけられるフックがお部屋に取付けてあります。靴箱は収納豊富で靴がたくさん入ります。</p>
-                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
-        </div>
+        </section>
         <hr>
-        <div class="section section-4">
+        <section class="section section-4">
             <div class="photo">
-                <a href="mobile.html"><img src="images/483.png" alt="" /></a>
+                <img src="images/483.png" alt="" />
             </div>
             <div class="text">
-                <h1>ACCESSIBILITY</h1>
+                <h2>ACCESSIBILITY</h2>
                 <p>江曽島駅から徒歩６分の場所でバス停も徒歩２分で近くにありお出かけにも便利です。人気の餃子店やお寿司屋がレスラン街道沿いにあるので、外食が楽しめる場所です。ウエルシア薬局、アピタ宇都宮店、セブンイレブン、ローソンも近くにありお買い物が便利です。</p>
-                <!-- <button class="button"><a href="mobile.html">タイトル一覧</a></button> -->
             </div>
-        </div>
-	</div>
-</section>
+        </section>
+        <iframe id="gMap"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3205.953703312893!2d139.85341395082054!3d36.53111129040205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601f67fde3964593%3A0xba833a53be0ea47a!2z44CSMzIxLTAxNTEg5qCD5pyo55yM5a6H6YO95a6u5biC6KW_5bed55Sw55S677yR77yQ77yQ77yU4oiS77yT77yRIOODluODquODqeODs-ODhg!5e0!3m2!1sja!2sjp!4v1678199548785!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </div>
 </main>
 
@@ -100,17 +95,6 @@
 	</nav>
 	<small>© Haruko Watanabe</small>
 </footer>
-<script type="text/javascript" src="head.js"></script>
-<script type="text/javascript" src="jquery.colorbox-min.js"></script>
-<script>
-$(function() {
-    $(".images").colorbox({
-    rel:'slideshow',
-    maxWidth:"90%",
-    maxHeight:"90%",
-    opacity: 0.7
-  });
-});
-</script>
+<script type="text/javascript" src="general.js"></script>
 </body>
 </html>
