--- a/summary.html
+++ b/summary.html
@@ -43,7 +43,7 @@
         <h1><span>SUMMARY</span></h1>
         <section class="section section-1">
             <div class="photo">
-                <img src="images/1212.png" alt="" />
+                <img src="images/s1212.png" alt="" />
             </div>
             <div class="text">
                 <h2>STYLE</h2>
@@ -53,7 +53,7 @@
         <hr>
         <section class="section section-2">
             <div class="photo">
-                <img src="images/1155.png" alt="" />
+                <img src="images/s1155.png" alt="" />
             </div>
             <div class="text">
                 <h2>FACILITIES</h2>
@@ -63,7 +63,7 @@
         <hr>
         <section class="section section-3">
             <div class="photo">
-                <img src="images/1157.png" alt="" />
+                <img src="images/s1157.png" alt="" />
             </div>
             <div class="text">
                 <h2>CLOSETS</h2>
@@ -73,7 +73,7 @@
         <hr>
         <section class="section section-4">
             <div class="photo">
-                <img src="images/483.png" alt="" />
+                <img src="images/s483.png" alt="" />
             </div>
             <div class="text">
                 <h2>ACCESSIBILITY</h2>
