--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
         <h1><span>PROFILE</span></h1>
         <section class="section section-1">
             <div class="photo">
-                <img src="images/1309.png" alt="" />
+                <img src="images/s1309.png" alt="" />
             </div>
             <div class="text">
                 <h2>貸主：渡辺治子</h2>
