--- a/gallery.html
+++ b/gallery.html
@@ -9,9 +9,8 @@
 	<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="general.css">
+	<link rel="stylesheet" href="luminous-basic.min.css">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
 </head>
 <body>
   <header id="top-head">
@@ -42,19 +41,19 @@
 	<div class="gallery general">
 		<h1><span>GALLERY</span></h1>
 		<div class="gridGallery">
-			<a class="item" href="images/g04.jpeg" data-fancybox="gallery"><img src="images/g04.jpeg" alt="" /></a>
-			<a class="item" href="images/g05.jpeg" data-fancybox="gallery"><img src="images/g05.jpeg" alt="" /></a>
-			<a class="item" href="images/g10.jpeg" data-fancybox="gallery"><img src="images/g10.jpeg" alt="" /></a>
-			<a class="item" href="images/g11.jpeg" data-fancybox="gallery"><img src="images/g11.jpeg" alt="" /></a>
-			<a class="item" href="images/g12.jpeg" data-fancybox="gallery"><img src="images/g12.jpeg" alt="" /></a>
-			<a class="item" href="images/g13.jpeg" data-fancybox="gallery"><img src="images/g13.jpeg" alt="" /></a>
-			<a class="item" href="images/g14.jpeg" data-fancybox="gallery"><img src="images/g14.jpeg" alt="" /></a>
-			<a class="item" href="images/g20.jpeg" data-fancybox="gallery"><img src="images/g20.jpeg" alt="" /></a>
-			<a class="item" href="images/g18.jpeg" data-fancybox="gallery"><img src="images/g18.jpeg" alt="" /></a>
-			<a class="item" href="images/g19.jpeg" data-fancybox="gallery"><img src="images/g19.jpeg" alt="" /></a>
-			<a class="item" href="images/g22.jpeg" data-fancybox="gallery"><img src="images/g22.jpeg" alt="" /></a>
+			<a class="luminous item" href="images/g04.jpeg"><img class="thumb" src="images/g04.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g05.jpeg"><img class="thumb" src="images/g05.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g10.jpeg"><img class="thumb" src="images/g10.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g11.jpeg"><img class="thumb" src="images/g11.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g12.jpeg"><img class="thumb" src="images/g12.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g13.jpeg"><img class="thumb" src="images/g13.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g14.jpeg"><img class="thumb" src="images/g14.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g20.jpeg"><img class="thumb" src="images/g20.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g18.jpeg"><img class="thumb" src="images/g18.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g19.jpeg"><img class="thumb" src="images/g19.jpeg" alt=""/></a>
+			<a class="luminous item" href="images/g22.jpeg"><img class="thumb" src="images/g22.jpeg" alt=""/></a>
 		</div>
-	</div>
+	</div>	
 </div>
 </main>
 
@@ -69,11 +68,30 @@
 	<small>© Haruko Watanabe</small>
 </footer>
 <script type="text/javascript" src="general.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<script type="text/javascript" src="luminous.min.js"></script>
 <script>
-	Fancybox.bind('[data-fancybox="gallery"]', {
-	  //
-	});    
-  </script>
+    //img 要素の alt 属性の値をキャプションとして表示するためのオプション
+    const luminousOpts = {
+      caption: (trigger) => {
+        return trigger.querySelector('img').getAttribute('alt');
+      },
+    }
+     
+    //全ての luminous クラスを指定した a 要素を取得
+    const luminousGalleryElems = document.querySelectorAll('.luminous');
+    //取得した要素が１つ以上あれば Luminous Lightbox を初期化
+    if( luminousGalleryElems.length > 0 ) {
+      new LuminousGallery(luminousGalleryElems, {}, luminousOpts);
+    } 
+      
+    //画像の先読み
+    //拡大画像へのリンク要素は上記の luminousGalleryElems で取得されているのでそれを利用
+    for(let i=0; i<luminousGalleryElems.length; i++) {
+      // img 要素を生成
+      const img = document.createElement('img');
+      // img 要素の src 属性にリンクの href 属性の値を設定
+      img.src = luminousGalleryElems[i].href;
+    }
+    </script>
 </body>
 </html>
