--- a/archives.html
+++ b/archives.html
@@ -9,7 +9,10 @@
 	<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="https://static.spearly.com/css/spearly-richtext.min.css" type="text/css">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
+    <script src="https://static.spearly.com/js/cms.js" defer></script>
+    <script>window.addEventListener('DOMContentLoaded',()=>{const t=document.querySelectorAll(':not(:defined)');for(const e of t) {e.style.visibility="hidden";}; window.spearly.config.AUTH_KEY="TMipNl_gbkMGj5aYa07rRH0r7R_xUzVbTlTXWCmbRoc"},{once:true})</script>
 </head>
 <body>
   <header id="top-head">
@@ -28,7 +31,7 @@
 		<ul>
         	<li><a class="list-1" href="summary.html">物件概要</a></li>
 			<li><a class="list-2" href="gallery.html">ギャラリー</a></li>
-            <li><a class="list-2" href="archives.html">お知らせ</a></li>
+			<li><a class="list-2" href="archives.html">お知らせ</a></li>
         	<li><a class="list-3" href="profile.html">管理人情報</a></li>
 			<li><a class="list-4" href="contact.html">お問い合わせ</a></li>
 		</ul>
@@ -38,16 +41,18 @@
 
 <main>
 <div id="background">
-    <div class="profile general">
-        <h1><span>PROFILE</span></h1>
-        <section class="section section-1">
-            <div class="photo">
-                <img src="images/s1309.png" alt="" />
-            </div>
-            <div class="text">
-                <h2>貸主：渡辺治子</h2>
-                <p>宇都宮でアパート経営をさせていただいています。宇都宮は餃子が有名でアパートの近くに人気店舗が複数あるので、餃子の食べ歩きが趣味の一つです。</p>
-            </div>
+    <div class="archives general">
+        <h1><span>ARCHIVES</span></h1>
+        <section>
+            <article-list data-item-page-path="article.html">
+                <a href="{%= article_#url %}">
+                    <img src="{%= article_image %}" alt="" class="fit image"/>
+                    <div class="articleTextLink">
+						<p>{%= article_date %}</p>
+                        <h3>{%= article_title %}</h3>
+                    </div>
+                </a>
+            </article-list>
         </section>
     </div>
 </div>
