--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="general.css">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
     <script src="https://static.spearly.com/js/cms.js" defer></script>
-<script>window.addEventListener('DOMContentLoaded',()=>{const t=document.querySelectorAll(':not(:defined)');for(const e of t) {e.style.visibility="hidden";}; window.spearly.config.AUTH_KEY="TMipNl_gbkMGj5aYa07rRH0r7R_xUzVbTlTXWCmbRoc"},{once:true})</script>
+    <script>window.addEventListener('DOMContentLoaded',()=>{const t=document.querySelectorAll(':not(:defined)');for(const e of t) {e.style.visibility="hidden";}; window.spearly.config.AUTH_KEY="TMipNl_gbkMGj5aYa07rRH0r7R_xUzVbTlTXWCmbRoc"},{once:true})</script>
 </head>
 <body>
   <header id="top-head">
@@ -30,7 +30,8 @@
 		<ul>
         	<li><a class="list-1" href="summary.html">物件概要</a></li>
 			<li><a class="list-2" href="gallery.html">ギャラリー</a></li>
-        	<li><a class="list-3" href="profile.html">管理人プロフィール</a></li>
+            <li><a class="list-2" href="archives.html">お知らせ</a></li>
+        	<li><a class="list-3" href="profile.html">管理人情報</a></li>
 			<li><a class="list-4" href="contact.html">お問い合わせ</a></li>
 		</ul>
 	  	</nav>
