--- a/summary.html
+++ b/summary.html
@@ -28,7 +28,8 @@
 		<ul>
         	<li><a class="list-1" href="summary.html">物件概要</a></li>
 			<li><a class="list-2" href="gallery.html">ギャラリー</a></li>
-        	<li><a class="list-3" href="profile.html">管理人プロフィール</a></li>
+            <li><a class="list-2" href="archives.html">お知らせ</a></li>
+        	<li><a class="list-3" href="profile.html">管理人情報</a></li>
 			<li><a class="list-4" href="contact.html">お問い合わせ</a></li>
 		</ul>
 	  	</nav>
