--- a/error.html
+++ b/error.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="utf-8">
-		<title>宇都宮アパートメント「ブリランテ」</title>
-		<meta name="description" content="宇都宮アパートメント「ブリランテ」は宇都宮市の賃貸アパートです。お部屋はリフォーム済みで明るいイメージです。所在地は江曽島駅から徒歩６分の場所にあります。">
-		<meta name="keywords" content=" アパート,一人暮らし,宇都宮">
-	</head>
+  <head>
+    <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>宇都宮アパートメント「ブリランテ」</title>
+    <meta
+      name="description"
+      content="宇都宮アパートメント「ブリランテ」は宇都宮市の賃貸アパートです。お部屋はリフォーム済みで明るいイメージです。所在地は江曽島駅から徒歩６分の場所にあります。"
+    />
+    <meta name="keywords" content=" アパート,一人暮らし,宇都宮" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap");
+      @font-face {
+        font-family: "Voto Serif GX";
+        src: url("VotoSerifGX.ttf") format("truetype-variations");
+        font-weight: 125 950;
+        font-stretch: 75% 125%;
+      }
+      body {
+        font-size: 1.5rem;
+      }
+      .section1 {
+        font-family: "Voto Serif GX", serif;
+        font-variation-settings: "wght" 100, "wdth" 50, "opsz" 50, "GRAD" 1;
+      }
+      .section2 {
+        font-family: "Playfair Display", serif;
+        font-variation-settings: "wght" 400, "GRAD" 1;
+      }
+    </style>
+  </head>
 
-	<body>
-		<p>ERROR</p>
-	</body>
+  <body>
+    <section class="section section1">
+      <div class="container container1">
+        <h1>Moby Dick宇都宮アパートメント｜ブリランテ</h1>
+        <h2>CHAPTER 1. Loomings.</h2>
+        <p>
+          Call me Ishmael. Some years ago—never mind how long precisely–having
+          little or no money in my purse, and nothing particular to interest me
+          on shore, I thought I would sail about a little and see the watery
+          part of the world. It is a way I have of driving off the spleen and
+          regulating the circulation. Whenever I find myself growing grim about
+          the mouth; whenever it is a damp, drizzly November in my soul;
+          whenever I find myself involuntarily pausing before coffin warehouses,
+          and bringing up the rear of every funeral I meet; and especially
+          whenever my hypos get such an upper hand of me, that it requires a
+          strong moral principle to prevent me from deliberately stepping into
+          the street, and methodically knocking people’s hats off then, I
+          account it high time to get to sea as soon as I can. This is my
+          substitute for pistol and ball. With a philosophical flourish Cato
+          throws himself upon his sword; I quietly take to the ship. There is
+          nothing surprising in this. If they but knew it, almost all men in
+          their degree, some time or other, cherish very nearly the same
+          feelings towards the ocean with me.
+        </p>
+      </div>
+    </section>
+    <section class="section section2">
+      <div class="container container1">
+        <h1>Moby Dick宇都宮アパートメント｜ブリランテ</h1>
+        <h2>CHAPTER 1. Loomings.</h2>
+        <p>
+          Call me Ishmael. Some years ago—never mind how long precisely–having
+          little or no money in my purse, and nothing particular to interest me
+          on shore, I thought I would sail about a little and see the watery
+          part of the world. It is a way I have of driving off the spleen and
+          regulating the circulation. Whenever I find myself growing grim about
+          the mouth; whenever it is a damp, drizzly November in my soul;
+          whenever I find myself involuntarily pausing before coffin warehouses,
+          and bringing up the rear of every funeral I meet; and especially
+          whenever my hypos get such an upper hand of me, that it requires a
+          strong moral principle to prevent me from deliberately stepping into
+          the street, and methodically knocking people’s hats off then, I
+          account it high time to get to sea as soon as I can. This is my
+          substitute for pistol and ball. With a philosophical flourish Cato
+          throws himself upon his sword; I quietly take to the ship. There is
+          nothing surprising in this. If they but knew it, almost all men in
+          their degree, some time or other, cherish very nearly the same
+          feelings towards the ocean with me.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
