--- a/error.html
+++ b/error.html
@@ -10,23 +10,36 @@
     />
     <meta name="keywords" content=" アパート,一人暮らし,宇都宮" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wdth,wght@62.5,100;100,900&display=swap");
       @font-face {
         font-family: "Voto Serif GX";
         src: url("VotoSerifGX.ttf") format("truetype-variations");
-        font-weight: 125 950;
-        font-stretch: 75% 125%;
+        font-weight: 28 194;
+        font-stretch: 50% 130%;
+        font-optical-sizing: auto;
+        font-style: normal;
+        font-display: swap;
+      }
+      html {
+        box-sizing: border-box;
+        font-size: 100%;
+      }
+      *,
+      *::before,
+      *::after {
+        box-sizing: inherit;
       }
       body {
-        font-size: 1.5rem;
+        font: 1.2em "Voto Serif GX", serif;
+        font-variation-settings: "wght" 100, "wdth" 80, "opsz" 50;
+        width: 90%;
+        margin: 0 auto;
+        padding: 0px;
       }
-      .section1 {
-        font-family: "Voto Serif GX", serif;
-        font-variation-settings: "wght" 100, "wdth" 50, "opsz" 50, "GRAD" 1;
-      }
+ 
       .section2 {
-        font-family: "Playfair Display", serif;
-        font-variation-settings: "wght" 400, "GRAD" 1;
+        font-family: "Noto Serif Display", serif;
+        font-variation-settings: "wght" 700, "wdth" 70;
       }
     </style>
   </head>
@@ -47,7 +60,7 @@
           and bringing up the rear of every funeral I meet; and especially
           whenever my hypos get such an upper hand of me, that it requires a
           strong moral principle to prevent me from deliberately stepping into
-          the street, and methodically knocking people’s hats off then, I
+          the street, and methodically knocking people’s hats off then, I
           account it high time to get to sea as soon as I can. This is my
           substitute for pistol and ball. With a philosophical flourish Cato
           throws himself upon his sword; I quietly take to the ship. There is
@@ -72,7 +85,7 @@
           and bringing up the rear of every funeral I meet; and especially
           whenever my hypos get such an upper hand of me, that it requires a
           strong moral principle to prevent me from deliberately stepping into
-          the street, and methodically knocking people’s hats off then, I
+          the street, and methodically knocking people’s hats off then, I
           account it high time to get to sea as soon as I can. This is my
           substitute for pistol and ball. With a philosophical flourish Cato
           throws himself upon his sword; I quietly take to the ship. There is
