--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
     <header id="top-head">
       <div class="inner">
         <div id="mobile-head">
-          <a class="brand" href="summary.html"
+          <a class="brand" href="index.html"
             >宇都宮アパートメント「ブリランテ」</a
           >
           <div id="nav-toggle">
@@ -33,7 +33,7 @@
         </div>
         <nav id="global-nav">
           <ul>
-            <li><a class="list-1" href="summary.html">物件概要</a></li>
+            <li><a class="list-1" href="index.html">物件概要</a></li>
             <li><a class="list-2" href="gallery.html">ギャラリー</a></li>
             <li><a class="list-2" href="archives.html">お知らせ</a></li>
             <li><a class="list-3" href="profile.html">管理人情報</a></li>
